--- a/miniDust/Base.lproj/Main.storyboard
+++ b/miniDust/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="0SC-g5-d0M" kind="relationship" relationship="rootViewController" id="sk2-gb-GrZ"/>
+                        <segue destination="OYG-pJ-dSh" kind="relationship" relationship="rootViewController" id="6ji-i3-lUm"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pLi-Ak-5dG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -77,48 +77,33 @@
             <point key="canvasLocation" x="-1624" y="-715"/>
         </scene>
         <!--위치 조회-->
-        <scene sceneID="LRS-eX-8xl">
+        <scene sceneID="woM-ha-tU8">
             <objects>
-                <viewController title="위치 조회" id="0SC-g5-d0M" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="D9z-e6-d8Z"/>
-                        <viewControllerLayoutGuide type="bottom" id="Tr6-Cg-QCC"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="5q3-Ke-oTl">
+                <tableViewController id="OYG-pJ-dSh" customClass="LocationSearchTableViewController" customModule="miniDust" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="G29-Qm-Iba">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T4i-Ma-JGv">
-                                <rect key="frame" x="0.0" y="212" width="600" height="238"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="1oJ-wv-buJ" style="IBUITableViewCellStyleDefault" id="UKi-oL-8VE">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UKi-oL-8VE" id="fy3-YL-Fp3">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="테스트" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1oJ-wv-buJ">
-                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="위치 조회" id="Pa8-dY-n0o"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KhQ-OE-Z5F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DataCell" id="ap2-MZ-qww">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ap2-MZ-qww" id="TSl-lC-TOa">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="OYG-pJ-dSh" id="76j-J0-l0s"/>
+                            <outlet property="delegate" destination="OYG-pJ-dSh" id="xJL-ZE-Ck5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="위치 조회" id="YKE-yJ-WZz"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uwk-cK-QTD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-869" y="-715"/>
+            <point key="canvasLocation" x="-920" y="-715"/>
         </scene>
         <!--초미세먼지-->
         <scene sceneID="tbP-p6-OGS">
